<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_image_size"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="@dimen/list_item_image_size"
        android:layout_height="@dimen/list_item_image_size"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_image" />

    <Button
        android:id="@+id/list_item_sell_button"
        style="@style/SellButtonStyle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/default_spacing"
        android:text="@string/button_sell" />

    <LinearLayout
        android:id="@+id/list_item_details"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_image_size"
        android:layout_toEndOf="@id/list_item_image"
        android:layout_toLeftOf="@id/list_item_sell_button"
        android:layout_toRightOf="@id/list_item_image"
        android:layout_toStartOf="@id/list_item_sell_button"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/default_spacing">

        <TextView
            android:id="@+id/list_item_artist"
            style="@style/list_item_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/dummy_artist" />

        <TextView
            android:id="@+id/list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/dummy_title" />

        <LinearLayout
            android:id="@+id/list_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/list_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_price_label" />

            <TextView
                android:id="@+id/list_item_price_value"
                style="@style/list_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/dummy_price" />

            <TextView
                android:id="@+id/list_item_price_unit"
                style="@style/list_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_disc_price" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_quantity_label"
                style="@style/list_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_quantity_label" />

            <TextView
                android:id="@+id/list_item_quantity_value"
                style="@style/list_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/dummy_quantity" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>